--- a/index.html
+++ b/index.html
@@ -1,2 +1,7 @@
 <h1>Hello!</h1>
- 
+ <html>
+<body bgcolor="#E6E6FA">
+<h1>Hello world!</h1>
+<p><a href="http://www.w3schools.com">Visit W3Schools.com!</a></p>
+</body>
+</html>
