--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <h1>Hello!</h1>
+
+<FORM METHOD="LINK" ACTION="page2.html">
+<INPUT TYPE="submit" VALUE="Clickable Button">
+ </html>
+ 
  <html>
 <body bgcolor="##5FFF33">
 </body>
