--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h1>Hello!</h1>
 
 <FORM METHOD="LINK" ACTION="page2.html">
-<INPUT TYPE="submit" VALUE="Clickable Button">
+<INPUT TYPE="submit" VALUE="Page 2">
  </html>
  
  <html>
