--- a/page2.html
+++ b/page2.html
@@ -1,1 +1,5 @@
-<iframe width="320" height="335" src="http://www.flowlab.io/game/embed/462693" frameborder="0" allowfullscreen></iframe>
+ <html>
+<body bgcolor="##5FFF33">
+</body>
+</html>
+<h1>Random</h1>
