--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>Hello!</h1>
 
-<FORM METHOD="LINK" ACTION="page2.html">
+<FORM METHOD="LINK" ACTION="page2.htm">
 <INPUT TYPE="submit" VALUE="Page 2">
  </html>
  
