--- a/page2.htm
+++ b/page2.htm
@@ -3,3 +3,4 @@
 </body>
 </html>
 <h1>Random</h1>
+<iframe width="320" height="335" src="http://www.flowlab.io/game/embed/462693" frameborder="0" allowfullscreen></iframe>
