--- a/page2.htm
+++ b/page2.htm
@@ -4,4 +4,19 @@
 </html>
 <h1>Random</h1>
 
-
+<table style="margin:0 0 10px 0; width:244px; background:#fff; border:1px solid #ccc;" cellspacing="0" cellpadding="0">
+	<tr>
+		<td style="font-family:verdana; font-size:11px; color:#000; padding:5px 10px;">
+			<a href="http://www.miniclip.com/games/splixio/en/" style="display:block; text-decoration:none;">
+				<img src="http://e.miniclip.com/content/game-icons/small/" width="70" height="59" align="left" style="margin-right:5px; border:0;" alt="Games at Miniclip.com - Splix.io" />
+				<a href="http://www.miniclip.com/games/splixio/en/" style="font-weight:bold; color:#000; border:none; text-decoration:underline;">Splix.io</a>
+				<p style="margin:0; clear:none; text-decoration:none; color:#000;">In Splix.io you must conquer as much land as possible and try to become biggest Splix.io of all!</p>
+			</a>
+		</td>
+	</tr>
+	<tr>
+		<td style="font-family:verdana; font-size:11px; padding:5px 10px; border-top:1px solid #ccc;">
+			<a href="http://www.miniclip.com/games/splixio/en/" title="Games at Miniclip.com">Play this free game now!</a>
+		</td>
+	</tr>
+</table>
